--- a/conf/dataset/translation/wmt16.yaml
+++ b/conf/dataset/translation/wmt16.yaml
@@ -1,10 +1,12 @@
 # @package dataset
-_target_: lightning_transformers.task.huggingface.summarization.CNNDailyMailSummarizationDataModule
+_target_: lightning_transformers.task.huggingface.translation.WMT16TranslationDataModule
 defaults:
-  - backbone@_group_: t5-base
+  - override backbone: huggingface/mt5-small
 cfg:
-  dataset_name: cnn_dailymail
-  dataset_config_name: 3.0.0
+  dataset_name: wmt16
+  dataset_config_name: 'ro-en' # WMT translation datasets: ['cs-en', 'de-en', 'fi-en', 'ro-en', 'ru-en', 'tr-en']
+  src_lang: 'en'
+  tgt_lang: 'ro'
   train_file: ''
   validation_file: ''
   cache_dir: null
@@ -14,6 +16,7 @@ cfg:
   load_from_cache_file: True
   max_source_length: 1024
   max_target_length: 128
+
 
   # torch data-loader specific arguments
   batch_size: ${training.batch_size}
