--- a/conf/dataset/nlp/translation/wmt16.yaml
+++ b/conf/dataset/nlp/translation/wmt16.yaml
@@ -1,6 +1,6 @@
 # @package dataset
 defaults:
-  - /dataset/nlp/default
+  - default
 _target_: lightning_transformers.task.nlp.huggingface.translation.WMT16TranslationDataModule
 cfg:
   dataset_name: wmt16
