Add docs for advanced extending datasets, and some fixes to names

--- a/conf/dataset/nlp/translation/wmt16.yaml
+++ b/conf/dataset/nlp/translation/wmt16.yaml
@@ -5,7 +5,7 @@ _target_: lightning_transformers.task.nlp.translation.WMT16TranslationDataModule
 cfg:
   dataset_name: wmt16
   dataset_config_name: 'ro-en' # WMT translation datasets: ['cs-en', 'de-en', 'fi-en', 'ro-en', 'ru-en', 'tr-en']
-  src_lang: 'en'
+  source_language: 'en'
   tgt_lang: 'ro'
   max_source_length: 128
   max_target_length: 128
