--- a/conf/dataset/nlp/translation/wmt16.yaml
+++ b/conf/dataset/nlp/translation/wmt16.yaml
@@ -1,6 +1,6 @@
 # @package dataset
 defaults:
-  - nlp/hf_default
+  - nlp/default
 _target_: lightning_transformers.task.nlp.translation.WMT16TranslationDataModule
 cfg:
   dataset_name: wmt16
